fix: Token same name (#9)
* sids and stars are only returned if they are near the front of the flight plan now or otherwise link to the flight plan string.